--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ai-sdk/openai": "^2.0.23",
     "@better-auth/expo": "^1.3.9",
     "@nestjs/axios": "^4.0.0",
+    "@nestjs/bullmq": "^11.0.4",
     "@nestjs/common": "^11.0.5",
     "@nestjs/core": "^11.0.5",
     "@nestjs/event-emitter": "^3.0.0",
@@ -42,6 +43,7 @@
     "ai": "^5.0.28",
     "axios": "^1.8.2",
     "better-auth": "^1.3.9",
+    "bullmq": "^5.63.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
